ACBrFramework/ACBrTEFDll.pas


{Set de Eventos}
Function TEF_SetOnAguardaResp(const tefHandle: PTEFHandle; const method : TAguardaRespCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin

  if (tefHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
  if Assigned(method) then
  begin
        tefHandle^.TEF.OnAguardaResp := tefHandle^.EventHandlers.OnAguardaResp;
        tefHandle^.EventHandlers.OnAguardaRespCallback := method;
        Result := 0;
  end
  else
  begin
        tefHandle^.TEF.OnAguardaResp := nil;
        tefHandle^.EventHandlers.OnAguardaRespCallback := nil;
        Result := 0;
  end;
  except
     on exception : Exception do
     begin
        tefHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;
end;

Function TEF_SetOnExibeMsg(const tefHandle: PTEFHandle; const method : TExibeMsgCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin

  if (tefHandle = nil) then
  begin
     Result := -2;
     Exit;
  end;

  try
  if Assigned(method) then
  begin
        tefHandle^.TEF.OnExibeMsg := tefHandle^.EventHandlers.OnExibeMsg;
        tefHandle^.EventHandlers.OnExibeMsgCallback := method;
        Result := 0;
  end
  else
  begin
        tefHandle^.TEF.OnExibeMsg := nil;
        tefHandle^.EventHandlers.OnExibeMsgCallback := nil;
        Result := 0;
  end;
  except
     on exception : Exception do
     begin
        tefHandle^.UltimoErro := exception.Message;
        Result := -1;
     end
  end;
end;

Function TEF_SetOnBloqueiaMouseTeclado(const tefHandle: PTEFHandle; const method : TBloqueiaMouseTecladoCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin

    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnBloqueiaMouseTeclado := tefHandle^.EventHandlers.OnBloqueiaMouseTeclado;
          tefHandle^.EventHandlers.OnBloqueiaMouseTecladoCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnBloqueiaMouseTeclado := nil;
          tefHandle^.EventHandlers.OnBloqueiaMouseTecladoCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnRestauraFocoAplicacao(const tefHandle: PTEFHandle; const method : TExecutaAcaoCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
     if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnRestauraFocoAplicacao := tefHandle^.EventHandlers.OnRestauraFocoAplicacao;
          tefHandle^.EventHandlers.OnRestauraFocoAplicacaoCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnRestauraFocoAplicacao := nil;
          tefHandle^.EventHandlers.OnRestauraFocoAplicacaoCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnLimpaTeclado(const tefHandle: PTEFHandle; const method : TExecutaAcaoCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnLimpaTeclado := tefHandle^.EventHandlers.OnLimpaTeclado;
          tefHandle^.EventHandlers.OnLimpaTecladoCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnLimpaTeclado := nil;
          tefHandle^.EventHandlers.OnLimpaTecladoCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnComandaECF(const tefHandle: PTEFHandle; const method : TComandaECFCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnComandaECF := tefHandle^.EventHandlers.OnComandaECF;
          tefHandle^.EventHandlers.OnComandaECFCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnComandaECF := nil;
          tefHandle^.EventHandlers.OnComandaECFCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnComandaECFSubtotaliza(const tefHandle: PTEFHandle; const method : TComandaECFSubtotalizaCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnComandaECFSubtotaliza := tefHandle^.EventHandlers.OnComandaECFSubtotaliza;
          tefHandle^.EventHandlers.OnComandaECFSubtotalizaCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnComandaECFSubtotaliza := nil;
          tefHandle^.EventHandlers.OnComandaECFSubtotalizaCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnComandaECFPagamento(const tefHandle: PTEFHandle; const method : TComandaECFPagamentoCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnComandaECFPagamento := tefHandle^.EventHandlers.OnComandaECFPagamento;
          tefHandle^.EventHandlers.OnComandaECFPagamentoCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnComandaECFPagamento := nil;
          tefHandle^.EventHandlers.OnComandaECFPagamentoCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnComandaECFAbreVinculado(const tefHandle: PTEFHandle; const method : TComandaECFAbreVinculadoCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnComandaECFAbreVinculado := tefHandle^.EventHandlers.OnComandaECFAbreVinculado;
          tefHandle^.EventHandlers.OnComandaECFAbreVinculadoCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnComandaECFAbreVinculado := nil;
          tefHandle^.EventHandlers.OnComandaECFAbreVinculadoCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnComandaECFImprimeVia(const tefHandle: PTEFHandle; const method : TComandaECFImprimeViaCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnComandaECFImprimeVia := tefHandle^.EventHandlers.OnComandaECFImprimeVia;
          tefHandle^.EventHandlers.OnComandaECFImprimeViaCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnComandaECFImprimeVia := nil;
          tefHandle^.EventHandlers.OnComandaECFImprimeViaCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnInfoECF(const tefHandle: PTEFHandle; const method : TInfoECFCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnInfoECF := tefHandle^.EventHandlers.OnInfoECF;
          tefHandle^.EventHandlers.OnInfoECFCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnInfoECF := nil;
          tefHandle^.EventHandlers.OnInfoECFCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnAntesFinalizarRequisicao(const tefHandle: PTEFHandle; const method : TAntesFinalizarRequisicaoCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnAntesFinalizarRequisicao := tefHandle^.EventHandlers.OnAntesFinalizarRequisicao;
          tefHandle^.EventHandlers.OnAntesFinalizarRequisicaoCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnAntesFinalizarRequisicao := nil;
          tefHandle^.EventHandlers.OnAntesFinalizarRequisicaoCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnDepoisConfirmarTransacoes(const tefHandle: PTEFHandle; const method : TDepoisConfirmarTransacoes) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnDepoisConfirmarTransacoes := tefHandle^.EventHandlers.OnDepoisConfirmarTransacoes;
          tefHandle^.EventHandlers.OnDepoisConfirmarTransacoesCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnDepoisConfirmarTransacoes := nil;
          tefHandle^.EventHandlers.OnDepoisConfirmarTransacoesCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnAntesCancelarTransacao(const tefHandle: PTEFHandle; const method : TAntesCancelarTransacaoCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;
